fix(web/home): fix behavior on mobile

--- a/packages/web/src/style/index.css
+++ b/packages/web/src/style/index.css
@@ -11,6 +11,8 @@ body {
 
   background-color: #ededed;
   scrollbar-width: thin;
+
+  box-sizing: border-box;
 }
 
 code {
